# hw-advanced-python

./: LICENSE  README.md
hw1/: pyproject.toml  requirements.txt  run-checks.sh
hw1/artifacts/: test_task1.txt  test_task2.txt  test_task3.txt
hw1/hw1/: task1.py  task2.py  task3.py
hw1/tests/: test_task1.py  test_task2.py  test_task3.py
hw2/: Dockerfile  docker-compose.yml
hw2/advanced-python-hw2-vdaleke/: run-checks.sh
hw2/advanced-python-hw2-vdaleke/advanced_python_hw2_vdaleke/: __init__.py
hw2/advanced-python-hw2-vdaleke/tests/: test_generate_images.py  test_generate_table.py
hw2/artifacts/task1/: tables.tex
hw2/artifacts/task2/: document.aux  document.tex  link.txt
hw2/artifacts/task3/: Dockerfile
hw2/generate-latex/: generate_latex.py  pyproject.toml  run-checks.sh
hw3/: pyproject.toml  run-checks.sh
hw3/artifacts/task1/: matrix+.txt
hw3/artifacts/task3/: AB.txt  B.txt  C.txt  CD.txt  find_collision.py
hw3/hw3/: __init__.py  matrix.py  numpy_matrix.py
hw3/tests/: test_matrix.py  test_numpy_matrix.py
hw3/tests/data/: A.txt  hash.txt  matrix*.txt  matrix@.txt  numpy_matrix*.txt  numpy_matrix+.txt  numpy_matrix@.txt
hw4/: pyproject.toml
hw4/artifacts/task1/: artifact.txt
hw4/artifacts/task2/: artifact.txt
hw4/artifacts/task3/: artifact.txt
hw4/src/hw4/: task1.py  task2.py  task3.py
hw4/tests/: test_task1.py  test_task2.py  test_task3.py
hw5/: pyproject.toml
hw5/artifacts/task2/: yandex_realty.json
hw5/src/hw5/: task1.py  task2.py
